# blindodon

./: .gitignore  Blindodon.sln  CLAUDE.md  README.md
.claude/: settings.local.json
.github/: dependabot.yml
.github/workflows/: build-alpha.yml  dependabot-auto-merge.yml
Blindodon.UI/: App.xaml  App.xaml.cs  Blindodon.UI.csproj
Blindodon.UI/Converters/: Converters.cs
Blindodon.UI/Services/: AccessibilityManager.cs  AudioManager.cs  KeybindingManager.cs  MastodonBridge.cs
Blindodon.UI/Themes/: DefaultTheme.xaml
Blindodon.UI/ViewModels/: AccountItemViewModel.cs  AccountSelectViewModel.cs  ComposeViewModel.cs  LoginViewModel.cs  MainViewModel.cs  NotificationViewModel.cs  PostViewModel.cs  TimelineViewModel.cs  UserViewModel.cs
Blindodon.UI/Views/: AccountSelectWindow.xaml  AccountSelectWindow.xaml.cs  ComposeWindow.xaml  ComposeWindow.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs
mastodon-core/: Cargo.toml
mastodon-core/src/: main.rs
mastodon-core/src/api/: client.rs  converter.rs  mod.rs
mastodon-core/src/cache/: mod.rs
mastodon-core/src/crypto/: mod.rs
mastodon-core/src/ipc/: handler.rs  mod.rs  server.rs
mastodon-core/src/logger/: mod.rs
mastodon-core/src/models/: account.rs  ipc_message.rs  media.rs  mod.rs  notification.rs  post.rs  timeline.rs  user.rs
mastodon-core/src/streaming/: mod.rs
