[package]
name = "mastodon-core"
version = "0.1.0"
edition = "2021"
description = "Rust backend core for Blindodon - an accessible Mastodon client"
authors = ["Blindodon Contributors"]
license = "AGPL-3.0-or-later"
repository = "https://github.com/garo-pro/blindodon"

[dependencies]
# Async runtime
tokio = { version = "1.49", features = ["full", "sync"] }

# Mastodon API client
megalodon = "1.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.13", features = ["json", "stream"] }

# Database
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "chrono"] }

# Logging
log = "0.4"
env_logger = "0.11"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Unique identifiers
uuid = { version = "1.20", features = ["v4", "serde"] }

# Encryption (for Blindodon PM)
ring = "0.17"
base64 = "0.22"

# IPC
interprocess = "2.2"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Utilities
dirs = "6.0"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "mastodon-core"
path = "src/main.rs"
